[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "PageSizey"
version = "1.0.0"
authors = [
  { name="Melvin Newman", email="melvin@patabid.com" },
]
description = "A small package to map paper size dimensions to ANSI or ISO page size codes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://patabid.com"
Issues = "https://github.com/patabid/PageSizey/issues"